<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/reader_status" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/assist_res_green"
            android:textSize="16sp"
            android:text="@string/connect" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <LinearLayout
            android:id="@+id/ll_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/prioritise_id"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/default_text"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_illustration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_id"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:text="@string/illustration"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_read_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/readsigns"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:background="@color/light_blue"/>
        <ListView
            android:id="@+id/lv_signs_log"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_illustration"
            android:layout_above="@id/tv_read_button"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </RelativeLayout>
</LinearLayout>