<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingBottom="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/tv_medical_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_text"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available"
                android:textColor="@color/status_green"
                android:textSize="12sp"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/tv_medical_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_text"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/original_qty"
                android:textColor="@color/black"
                android:textSize="11sp" />
            <TextView
                android:id="@+id/tv_original_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_text"
                android:textColor="@color/black"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="right"
        android:paddingRight="20dp">
        <TextView
            android:id="@+id/tv_assist_res"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/assist_res"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@color/assist_res_green" />
        <TextView
            android:id="@+id/tv_used_res"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/used_res"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@color/used_res_orange" />
    </LinearLayout>
</LinearLayout>