<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.st.cms.activity.MainActivity">

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />-->
    <!--<RelativeLayout-->
    <!--android:id="@+id/rl_btn"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:visibility="visible">-->
    <!--<TextView-->
    <!--android:id="@+id/retrieve_tag"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/retrieve_tag"-->
    <!--android:background="@drawable/tv_shape"-->
    <!--android:textSize="20sp"-->
    <!--android:layout_centerInParent="true"/>-->
    <!--</RelativeLayout>-->
    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ImageView
            android:id="@+id/iv_main_victim"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ben"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_suspect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_suspect"
                android:textColor="@android:color/background_dark"/>
            <CheckBox
                android:id="@+id/cb_main_suspect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_suspect"
                android:layout_alignRight="@+id/tv_suspect"
                android:checked="false"

             />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prioritise_id"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_id"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prioritise_zone"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none_text"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_lv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_zone"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_lv"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_lv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none_text"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_lv"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prioritise_hint"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dialog"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bag_id"
                android:textSize="16sp"
                android:textColor="@android:color/background_dark"/>
            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:background="@drawable/edit_bg"
                android:layout_height="40dp"
                android:textSize="20sp"
                android:hint="@string/bag_id"
                android:singleLine="true"
                android:textColor="@android:color/background_dark"/>
        </LinearLayout>
        <ListView
            android:id="@+id/lv_prioritises"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/dialog"
            android:layout_below="@id/ll_hint"
            android:divider="@null" />
    </RelativeLayout>



</RelativeLayout>
