<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_blood_group"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/tv_medical_style"
        android:text="@string/blood_transfusion"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.st.cms.widget.MedicalSelectView
            android:id="@+id/spinner_medical"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            app:mtv_text="@string/blood_prompt"
            app:mtv_textColor="@color/medicalLime"
            android:gravity="center"/>
        <com.st.cms.widget.MedicalEditView
            android:id="@+id/spinner_medical_qty"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/spinner_medical"
            android:layout_toRightOf="@id/spinner_medical"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:background="@null"
            android:inputType="number"
            android:hint="@string/qty"
            android:textColorHint="@color/medicalLime"
            android:layout_alignBottom="@+id/spinner_medical" />
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/tv_medical_style"
        android:text="@string/treatment_prompt"
        android:layout_marginTop="20dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/lv_medical_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:visibility="gone"/>
        <RelativeLayout
            android:layout_below="@id/lv_medical_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.st.cms.widget.MedicalSelectView
            android:id="@+id/spinner_treatment"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:mtv_text="@string/treatment_prompt"
            app:mtv_textColor="@color/medicalLime"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"/>
        <com.st.cms.widget.MedicalEditView
            android:id="@+id/spinner_treatment_qty"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/qty"
            android:textColorHint="@color/medicalLime"
            android:background="@null"
            android:inputType="number"
            android:textSize="16sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/spinner_treatment"
            android:layout_toEndOf="@+id/spinner_treatment"
            android:layout_marginLeft="20dp"
            android:layout_alignBottom="@+id/spinner_treatment" />
        <ImageView
            android:id="@+id/iv_add_treatment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/spinner_treatment_qty"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/add" />
        </RelativeLayout>
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/tv_medical_style"
        android:text="@string/drug_prompt"
        android:layout_marginTop="20dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/lv_drug_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:visibility="gone"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lv_drug_list">
        <com.st.cms.widget.MedicalSelectView
            android:id="@+id/spinner_drug"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:mtv_text="@string/drug_prompt"
            app:mtv_textColor="@color/medicalLime"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"/>
        <com.st.cms.widget.MedicalEditView
            android:id="@+id/spinner_drug_qty"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:hint="@string/qty"
            android:textColorHint="@color/medicalLime"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/spinner_drug"
            android:background="@null"
            android:inputType="number"
            android:textSize="16sp"
            android:layout_toEndOf="@+id/spinner_drug"
            android:layout_marginLeft="20dp"
            android:layout_alignBottom="@+id/spinner_drug" />
        <ImageView
            android:id="@+id/iv_add_drug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/spinner_drug_qty"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/add"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>