<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/iv_main_victim"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ben"
         />

        <LinearLayout
            android:id="@+id/ll_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Patient Tag ID:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_id"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Incident:"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none_text"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_lv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_zone"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zone:"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_zone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none_text"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_lv"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prioritise_hint"
                android:textColor="@color/black"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none_text"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/confirm_green"
        android:paddingTop="64dp"
        android:paddingBottom="64dp">
        <FrameLayout
            android:id="@+id/fl_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@mipmap/circle_with_check_symbol"
                android:layout_gravity="center" />
            <ImageView
                android:id="@+id/iv_sign"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@mipmap/checked_symbol"
                android:layout_gravity="center"/>
        </FrameLayout>
        <TextView
            android:id="@+id/tv_prioritise_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prioritise_completed"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/fl_top"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:theme="@style/tv_button_style"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>
    </RelativeLayout>


</LinearLayout>

